schedulersource/main/default/objects/ServiceAppointment/fields/NextOccurenceId__c.field-meta.xml
<CustomField>
    <fullName>NextOccurenceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Occurence of Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>