schedulersource/main/default/objects/ServiceAppointment/fields/RecurrencePeriod__c.field-meta.xml
<CustomField>
    <fullName>RecurrencePeriod__c</fullName>
    <description>The number of either days, weeks or months between two instances of a recurring Service Appointment</description>
    <label>Recurrence Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>