schedulersource/main/default/objects/ServiceAppointment/fields/UpdateAllOccurrences__c.field-meta.xml
<CustomField>
    <fullName>UpdateAllOccurrences__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update All Occurrences</label>
    <type>Checkbox</type>
</CustomField>