schedulersource/main/default/objects/ServiceAppointment/fields/UpdatedByAgent__c.field-meta.xml
<CustomField>
    <fullName>UpdatedByAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated By Agent</label>
    <type>Checkbox</type>
</CustomField>